whoami/whoami-ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  containers:
    - image: 'docker.io/containous/whoami'
      name: whoami
      ports:
        - containerPort: 80
          protocol: TCP
