whoami/whoami-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /whoami
            backend:
              service:
                name: whoami
                port:
                  number: 80
            pathType: Exact
